--- a/src/renderer/App.scss
+++ b/src/renderer/App.scss
@@ -6,6 +6,9 @@ body {
   position: relative;
   color: white;
   height: 100vh;
+  width: 100vw;
+  margin: 0;
+  padding: 0;
   background: linear-gradient(
     200.96deg,
     #fedc2a -29.09%,
@@ -24,6 +27,8 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  height: 100vh;
+  width: 100vw;
 
   button {
     background-color: white;
@@ -65,5 +70,22 @@ body {
     justify-content: center;
     align-items: center;
     margin: 20px 0;
+  }
+
+  .vtk-container-list {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+
+    .vtk-container-item {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      padding: 10px;
+    }
   }
 }
